--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
   },
   "homepage": "https://github.com/coderhaoxin/parse-url-from-xls",
   "dependencies": {
+    "co": "^3.0.6",
+    "debug": "^1.0.2",
+    "fast-csv": "^0.4.1",
     "jsdom": "^0.11.1",
-    "xlsjs": "^0.7.0",
-    "xlsx": "^0.7.7"
+    "xls-to-json": "^0.3.1",
+    "xlsx-to-json": "^0.2.3"
   }
 }
