--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "co": "^3.0.6",
     "debug": "^1.0.2",
     "fast-csv": "^0.4.1",
+    "iconv-lite": "^0.4.3",
+    "jschardet": "^1.1.0",
     "jsdom": "^0.11.1",
     "xls-to-json": "^0.3.1",
     "xlsx-to-json": "^0.2.3"
