--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "homepage": "https://github.com/coderhaoxin/parse-url-from-xls",
   "dependencies": {
     "co": "^3.0.6",
+    "co-any": "0.0.2",
+    "co-gather": "0.0.1",
     "debug": "^1.0.2",
     "fast-csv": "^0.4.1",
     "iconv-lite": "^0.4.3",
