--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "iconv-lite": "^0.4.3",
     "jschardet": "^1.1.0",
     "jsdom": "^0.11.1",
+    "line-reader": "^0.2.3",
     "xls-to-json": "^0.3.1",
     "xlsx-to-json": "^0.2.3"
   }
