--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "co": "^3.0.6",
     "co-any": "0.0.2",
     "co-gather": "0.0.1",
+    "co-urllib": "^0.2.3",
     "debug": "^1.0.2",
     "fast-csv": "^0.4.1",
     "iconv-lite": "^0.4.3",
+    "jparser": "0.0.2",
     "jschardet": "^1.1.0",
     "jsdom": "^0.11.1",
     "line-reader": "^0.2.3",
