--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jparser": "0.0.2",
     "jschardet": "^1.1.0",
     "jsdom": "^0.11.1",
+    "json2xls": "0.0.5",
     "line-reader": "^0.2.3",
     "xls-to-json": "^0.3.1",
     "xlsx-to-json": "^0.2.3"
