--- a/static/bower.json
+++ b/static/bower.json
@@ -1,15 +1,13 @@
 {
-  "name": "ci.go",
-  "version": "0.0.0",
-  "homepage": "https://github.com/coderhaoxin/ci.go",
+  "name": "porter",
+  "private": true,
   "authors": [
     "haoxin <coderhaoxin@outlook.com>"
   ],
-  "description": "a CI service based on docker and drone",
   "main": "app.js",
   "license": "MIT",
   "dependencies": {
-    "angular": "~1.2.26",
-    "angular-material": "~0.0.3"
+    "react": "~0.12.2",
+    "fetch": "~0.6.0"
   }
 }
